# openclaw-deep-research-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: server.py  storage.py  telegram_bot.py
openclaw-skill/: SKILL.md
openclaw_deep_research_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
research/: __init__.py  config.py  flow.py  llm_factory.py  schemas.py  search_tools.py  secrets.py
tests/: test_flow.py
web/: app.py
